Update to Java21